# grpc-testing

./: .clang-format  .clangd  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  build.sh  compile.sh
cmake/: FindFmt.cmake  FindGRPC.cmake  FindOpenSSL.cmake  FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake  FindPkgConfig.cmake  FindProtobuf.cmake  FindThreads.cmake  FindgRPC.cmake  SelectLibraryConfigurations.cmake  compiler_flags.cmake  utils.cmake
include/: CMakeLists.txt
include/hyundeok/grpc/: chrono.h  ssl.h  string.h
proto/: CMakeLists.txt  ssl_exchange.proto
src/: CMakeLists.txt
src/hyundeok/grpc/: chrono.cc  ssl.cc  string.cc
src/hyundeok/grpc/client/: main.cc
src/hyundeok/grpc/server/: main.cc
