cmake_minimum_required(VERSION 3.13)

project(
  grpc-testing
  VERSION 0.0.1
  DESCRIPTION "Testing gRPC"
  LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

list(INSERT CMAKE_MODULE_PATH 0 ${CMAKE_CURRENT_LIST_DIR}/cmake)

find_package(PkgConfig REQUIRED)
find_package(Threads REQUIRED)

include(utils)
include(compiler_flags)

set(LIBRARY_PROTO ${PROJECT_NAME}-PROTO)
set(LIBRARY_OBJLIB ${PROJECT_NAME}-OBJLIB)
set(LIBRARY_SHARED ${PROJECT_NAME}-SHARED)
set(LIBRARY_STATIC ${PROJECT_NAME}-STATIC)
set(EXECUTABLE_CLIENT ${PROJECT_NAME}-client)
set(EXECUTABLE_SERVER ${PROJECT_NAME}-server)

add_library(${LIBRARY_OBJLIB} OBJECT)
add_library(${LIBRARY_SHARED} SHARED)
add_library(${LIBRARY_STATIC} STATIC)
add_executable(${EXECUTABLE_CLIENT})
add_executable(${EXECUTABLE_SERVER})

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/proto)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/include)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src)

install(
  TARGETS ${LIBRARY_SHARED} ${LIBRARY_STATIC} ${EXECUTABLE_CLIENT}
          ${EXECUTABLE_SERVER}
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  RUNTIME DESTINATION bin
  PUBLIC_HEADER DESTINATION include)
